k8s/clusters/glug-infra/ghost/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ghost
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/enforce-version: latest
